--- a/src/components/pages/new/text/CommentsBoard/CommentsBoard.module.css
+++ b/src/components/pages/new/text/CommentsBoard/CommentsBoard.module.css
@@ -1,9 +1,9 @@
 .board {
-    width: auto;
-    padding: 1em 1.5em;
-    margin: 1em 0;
+    width: 40rem;
+    padding: 1rem 1.5rem;
+    margin: 1rem 0;
     background-color: #ffffff;
     border: 1px solid #000000;
-    box-shadow: 0.1em 0.1em 0.1em rgb(60, 60, 60);
+    box-shadow: 0.1rem 0.1rem 0.1rem rgb(60, 60, 60);
     color: #000000;
 }
