--- a/src/components/pages/new/text/CommentBoard/CommentElement.module.css
+++ b/src/components/pages/new/text/CommentBoard/CommentElement.module.css
@@ -4,6 +4,6 @@
     margin: 1rem 0;
     background-color: #ffffff;
     border: 1px solid #000000;
-    box-shadow: 0.1em 0.1em 0.1em rgb(60, 60, 60);
+    box-shadow: 0.1rem 0.1rem 0.1rem rgb(60, 60, 60);
     color: #000000;
 }
